# university-lab-3

./: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  linked-list.cpp  main.cpp  meson.build  node.cpp
.cache/clangd/index/: linked-list.cpp.5EC2FC37D2317C20.idx  main.cpp.93BE2039AA4769AB.idx  node-list.h.17FD522444B6F6B4.idx  node.cpp.3FDC514D914E257C.idx  node.h.59213A863849E769.idx
include/: node-list.h  node.h
